downgrade eslint verions

--- a/.eslintrc
+++ b/.eslintrc
@@ -36,6 +36,7 @@
         "endOfLine": "auto"
       }
     ],
-    "quotes": [2, "single", { "avoidEscape": true }]
+    "quotes": [2, "single", { "avoidEscape": true }],
+    "@typescript-eslint/no-use-before-define": "off"
   }
 }
