--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@svgr/webpack": "^5.4.0",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.3",
+    "@types/webfontloader": "^1.6.32",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
     "babel-loader": "^8.1.0",
@@ -60,7 +61,8 @@
     "react-dom": "^16.13.1",
     "react-hot-loader": "^4.13.0",
     "react-router-dom": "^5.2.0",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.2.0",
+    "webfontloader": "^1.6.28"
   },
   "husky": {
     "hooks": {
