--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,12 @@
   },
   "plugins": ["react", "@typescript-eslint"],
   "rules": {
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ],
     "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": "error",
     "import/no-unresolved": "off",
